# wagtail-email-subscription

./: .flake8  .gitignore  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
sandbox/: settings.py  urls.py
sandbox/settings/: base.py  github-ci.py
sandbox/testapp/: models.py
sandbox/testapp/migrations/: 0001_initial.py
src/wagtail_active_campaign/: __init__.py  abstract_models.py  admin.py  client.py  config.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py
src/wagtail_active_campaign/chooser/: base.py  views.py  widgets.py
src/wagtail_active_campaign/contrib/formpage/: admin.py  models.py
src/wagtail_active_campaign/contrib/formpage/migrations/: 0001_initial.py  0002_formpagesubmission.py
src/wagtail_active_campaign/contrib/formpage/templates/form_page/: base.html  form_page_landing.html
src/wagtail_active_campaign/migrations/: 0001_initial.py
src/wagtail_active_campaign/templates/wagtail_active_campaign/: base.html  form_page.html  form_page_landing.html
src/wagtail_bootstrap_app/: urls.py  views.py
src/wagtail_email_subscription/: __init__.py  abstract_models.py  admin.py  client.py  config.py  models.py  utils.py  wagtail_hooks.py
src/wagtail_email_subscription/chooser/: base.py  panels.py  views.py  widgets.py
src/wagtail_email_subscription/contrib/formpage/: admin.py  models.py
src/wagtail_email_subscription/contrib/formpage/migrations/: 0001_initial.py  0002_convert_selected_list_to_json_field.py
src/wagtail_email_subscription/contrib/formpage/templates/form_page/: form_page.html
src/wagtail_email_subscription/migrations/: 0001_initial.py
src/wagtail_email_subscription/static/generic_chooser/js/: chooser-modal.js
tests/: conftest.py  factories.py  testdata.py
tests/functional/: test_boilerplate.py  test_chooser_views.py  test_form_view.py  test_multiple_form_fields.py  test_views.py
tests/project/: test_migrations.py
tests/unit/: test_active_campaign_client.py  test_models.py
tests/unit/chooser/: test_viewset.py  test_widgets.py
